argocd-applications/media/qbittorrent/qbittorrent_resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: bt-tcp
      port: 53412
      targetPort: bt-tcp
      protocol: TCP
    - name: bt-udp
      port: 53412
      targetPort: bt-udp
      protocol: UDP
    # - name: metrics
    #   port: 8000
    #   targetPort: metrics
    #   protocol: TCP
